# lab-notebook

./: .gitignore  COMPARISON_supermemory.md  README.md  SKILL.md  lnb.py  pyproject.toml  schema.example.yaml
.github/workflows/: ci.yml
.goal/: lnb-json-output.json  lnb-json-output.ledger.json  lnb-json-output.spec.md
design/: ITER2_NOTES.md  MINIMAL_LNB_DESIGN.md
examples/: retrieval.md
skill/: SKILL.md
src/lab_notebook/: cli.py  complete.py  schema.py  store.py
src/lab_notebook/schemas/: ml-experiment-log.yaml  research-logbook.yaml  research-notebook.yaml
tests/: test_cli.py  test_lnb.py
