[project]
name = "lab-notebook"
version = "0.1.0"
description = "Append-only lab notebook with SQL query support"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
lab-notebook = "lab_notebook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
