[project]
name = "lnb-min"
version = "0.1.0"
description = "Minimal lab notebook: a git-tracked, append-only log you scan."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
lnb = "lnb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lnb.py"]
